# computation_club

./: README.md  computation-club.cabal
src/tpl/: README.md
src/tpl/07-lambda-calculus/: TplLC.hs
src/tpl/9-10-simply-typed-lambda-calculus/: TplSimplyTypedLC.hs
test/tpl/: Spec.hs
tpl/3-4_untyped_arithmetic_expressions/: TplUntypedArithmetic.hs
tpl/9-10_simply_typed_lambda_calculus/: TplSimplyTypedLC.hs
