name:                computation-club
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jesuspc/computation_club#readme
license:             BSD3
author:              Jesus Prieto Colomina
maintainer:          chus1818@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/tpl,
                       src/tpl/3-4-untyped-arithmetic-expressions,
                       src/tpl/9-10-simply-typed-lambda-calculus,
                       src/tpl/7-lambda-calculus
  exposed-modules:     TplUntypedArithmetic,
                       TplSimplyTypedLC,
                       TplLC
  build-depends:       base >= 4.7 && < 5
                     , containers

  default-language:    Haskell2010
  extensions:          OverloadedStrings
                     , TemplateHaskell
                     , FlexibleInstances

executable computation-club-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
  extensions:

test-suite tpl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/tpl
  main-is:             Spec.hs
  build-depends:       base
                     , computation-club
                     , hspec

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hchain